facet-derive-emit/tests/snapshots/codegen__array_field_in_struct.snap
---
source: facet-derive-emit/tests/codegen.rs
expression: "expand(r#\"\n        #[derive(Facet)]\n        pub struct DataPacket {\n            header: [u8; 16],\n            payload: Vec<u8>,\n            metadata: [MetadataTag; 4],\n        }\n        \"#)"
---
#[used]
static DATA_PACKET_SHAPE: &'static ::facet::Shape = <DataPacket as ::facet::Facet>::SHAPE;
#[automatically_derived]
unsafe impl ::facet::Facet for DataPacket {
    const SHAPE: &'static ::facet::Shape = &const {
        let fields: &'static [::facet::Field] = &const {
            [
                ::facet::Field::builder()
                    .name("header")
                    .shape(|| ::facet::shape_of(&|s: &DataPacket| &s.header))
                    .offset(::core::mem::offset_of!(DataPacket, header))
                    .flags(::facet::FieldFlags::EMPTY)
                    .attributes(&[])
                    .build(),
                ::facet::Field::builder()
                    .name("payload")
                    .shape(|| ::facet::shape_of(&|s: &DataPacket| &s.payload))
                    .offset(::core::mem::offset_of!(DataPacket, payload))
                    .flags(::facet::FieldFlags::EMPTY)
                    .attributes(&[])
                    .build(),
                ::facet::Field::builder()
                    .name("metadata")
                    .shape(|| ::facet::shape_of(&|s: &DataPacket| &s.metadata))
                    .offset(::core::mem::offset_of!(DataPacket, metadata))
                    .flags(::facet::FieldFlags::EMPTY)
                    .attributes(&[])
                    .build(),
            ]
        };
        let vtable = &const {
            let mut vtable =
                ::facet::value_vtable_inner!(Self, |f, _opts| ::core::fmt::Write::write_str(
                    f,
                    "DataPacket"
                ));
            vtable
        };
        ::facet::Shape::builder()
            .id(::facet::ConstTypeId::of::<Self>())
            .layout(::core::alloc::Layout::new::<Self>())
            .vtable(vtable)
            .def(::facet::Def::Struct(
                ::facet::Struct::builder()
                    .kind(::facet::StructKind::Struct)
                    .fields(fields)
                    .build(),
            ))
            .build()
    };
}
