facet-derive-emit/tests/snapshots/codegen__enum_generic.snap
---
source: facet-derive-emit/tests/codegen.rs
expression: "expand(r#\"\n        #[allow(dead_code)]\n        #[derive(Facet)]\n        #[repr(u8)]\n        enum E<'a, T: Facet + core::hash::Hash, const C: usize = 3>\n        where\n            T: Debug, // Added Debug bound\n             [u8; C]: Debug, // Added Debug bound\n        {\n            Unit,\n            Tuple(T, core::marker::PhantomData<&'a [u8; C]>),\n            Record {\n                field: T,\n                phantom: core::marker::PhantomData<&'a ()>,\n                constant_val: [u8; C],\n            },\n        }\n        \"#)"
---
#[automatically_derived]
unsafe impl<'a, T: Facet + core::hash::Hash, const C: usize> ::facet::Facet for E<'a, T, C>
where
    T: Debug,
    [u8; C]: Debug,
    T: ::facet::Facet,
{
    const SHAPE: &'static ::facet::Shape = &const {
        #[repr(C)]
        struct __ShadowE_Tuple<'a, T: Facet + core::hash::Hash, const C: usize>
        where
            T: Debug,
            [u8; C]: Debug,
            T: ::facet::Facet,
        {
            _discriminant: u8,
            _0: T,
            _1: core::marker::PhantomData<&'a [u8; C]>,
        }
        #[repr(C)]
        struct __ShadowE_Record<'a, T: Facet + core::hash::Hash, const C: usize>
        where
            T: Debug,
            [u8; C]: Debug,
            T: ::facet::Facet,
        {
            _discriminant: u8,
            field: T,
            phantom: core::marker::PhantomData<&'a ()>,
            constant_val: [u8; C],
        }
        ::facet::Shape::builder()
            .id(::facet::ConstTypeId::of::<Self>())
            .layout(::core::alloc::Layout::new::<Self>())
            .vtable(::facet::value_vtable!(Self, |f, _opts| {
                ::core::fmt::Write::write_str(f, "E")
            }))
            .def(::facet::Def::Enum(
                ::facet::EnumDef::builder()
                    .variants(
                        &const {
                            [
                                ::facet::Variant::builder()
                                    .name("Unit")
                                    .discriminant(0)
                                    .offset(0)
                                    .fields(::facet::Struct::builder().unit().build())
                                    .build(),
                                {
                                    let fields: &'static [::facet::Field] = &const {
                                        [
                                            ::facet::Field::builder()
                                                .name("_0")
                                                .shape(|| {
                                                    ::facet::shape_of(
                                                        &|s: &__ShadowE_Tuple<'a, T, C>| &s._0,
                                                    )
                                                })
                                                .offset(::core::mem::offset_of!(
                                                    __ShadowE_Tuple<'a, T, C>,
                                                    _0
                                                ))
                                                .flags(::facet::FieldFlags::EMPTY)
                                                .attributes(&[])
                                                .build(),
                                            ::facet::Field::builder()
                                                .name("_1")
                                                .shape(|| {
                                                    ::facet::shape_of(
                                                        &|s: &__ShadowE_Tuple<'a, T, C>| &s._1,
                                                    )
                                                })
                                                .offset(::core::mem::offset_of!(
                                                    __ShadowE_Tuple<'a, T, C>,
                                                    _1
                                                ))
                                                .flags(::facet::FieldFlags::EMPTY)
                                                .attributes(&[])
                                                .build(),
                                        ]
                                    };
                                    ::facet::Variant::builder()
                                        .name("Tuple")
                                        .discriminant(1)
                                        .offset(0)
                                        .fields(
                                            ::facet::Struct::builder()
                                                .tuple()
                                                .fields(fields)
                                                .build(),
                                        )
                                        .build()
                                },
                                {
                                    let fields: &'static [::facet::Field] = &const {
                                        [
                                            ::facet::Field::builder()
                                                .name("field")
                                                .shape(|| {
                                                    ::facet::shape_of(
                                                        &|s: &__ShadowE_Record<'a, T, C>| &s.field,
                                                    )
                                                })
                                                .offset(::core::mem::offset_of!(
                                                    __ShadowE_Record<'a, T, C>,
                                                    field
                                                ))
                                                .flags(::facet::FieldFlags::EMPTY)
                                                .attributes(&[])
                                                .build(),
                                            ::facet::Field::builder()
                                                .name("phantom")
                                                .shape(|| {
                                                    ::facet::shape_of(
                                                        &|s: &__ShadowE_Record<'a, T, C>| {
                                                            &s.phantom
                                                        },
                                                    )
                                                })
                                                .offset(::core::mem::offset_of!(
                                                    __ShadowE_Record<'a, T, C>,
                                                    phantom
                                                ))
                                                .flags(::facet::FieldFlags::EMPTY)
                                                .attributes(&[])
                                                .build(),
                                            ::facet::Field::builder()
                                                .name("constant_val")
                                                .shape(|| {
                                                    ::facet::shape_of(
                                                        &|s: &__ShadowE_Record<'a, T, C>| {
                                                            &s.constant_val
                                                        },
                                                    )
                                                })
                                                .offset(::core::mem::offset_of!(
                                                    __ShadowE_Record<'a, T, C>,
                                                    constant_val
                                                ))
                                                .flags(::facet::FieldFlags::EMPTY)
                                                .attributes(&[])
                                                .build(),
                                        ]
                                    };
                                    ::facet::Variant::builder()
                                        .name("Record")
                                        .discriminant(2)
                                        .offset(0)
                                        .fields(
                                            ::facet::Struct::builder()
                                                .struct_()
                                                .fields(fields)
                                                .build(),
                                        )
                                        .build()
                                },
                            ]
                        },
                    )
                    .repr(::facet::EnumRepr::U8)
                    .build(),
            ))
            .build()
    };
}
