facet-derive-emit/tests/snapshots/codegen__enum_variants_with_comments.snap
---
source: facet-derive-emit/tests/codegen.rs
expression: "expand(r#\"\n        #[derive(Facet)]\n        #[repr(u8)]\n        enum CommentedEnum {\n            /// This is variant A\n            #[allow(dead_code)]\n            A,\n            /// This is variant B\n            /// with multiple lines\n            #[allow(dead_code)]\n            B(u32),\n            /// This is variant C\n            /// which has named fields\n            #[allow(dead_code)]\n            C {\n                /// This is field x\n                x: u32,\n                /// This is field y\n                y: String,\n            },\n        }\n        \"#)"
---
#[used]
static COMMENTED_ENUM_SHAPE: &'static ::facet::Shape = <CommentedEnum as ::facet::Facet>::SHAPE;
#[automatically_derived]
unsafe impl ::facet::Facet for CommentedEnum {
    const SHAPE: &'static ::facet::Shape = &const {
        #[repr(C)]
        struct __ShadowCommentedEnum_B {
            _discriminant: u8,
            _0: u32,
        }
        #[repr(C)]
        struct __ShadowCommentedEnum_C {
            _discriminant: u8,
            x: u32,
            y: String,
        }
        ::facet::Shape::builder()
            .id(::facet::ConstTypeId::of::<Self>())
            .layout(::core::alloc::Layout::new::<Self>())
            .vtable(::facet::value_vtable!(Self, |f, _opts| {
                ::core::fmt::Write::write_str(f, "CommentedEnum")
            }))
            .def(::facet::Def::Enum(
                ::facet::EnumDef::builder()
                    .variants(
                        &const {
                            [
                                ::facet::Variant::builder()
                                    .name("A")
                                    .discriminant(0)
                                    .offset(0)
                                    .fields(::facet::Struct::builder().unit().build())
                                    .doc(&[" This is variant A"])
                                    .build(),
                                {
                                    let fields: &'static [::facet::Field] = &const {
                                        [::facet::Field::builder()
                                            .name("_0")
                                            .shape(|| {
                                                ::facet::shape_of(&|s: &__ShadowCommentedEnum_B| {
                                                    &s._0
                                                })
                                            })
                                            .offset(::core::mem::offset_of!(
                                                __ShadowCommentedEnum_B,
                                                _0
                                            ))
                                            .flags(::facet::FieldFlags::EMPTY)
                                            .attributes(&[])
                                            .build()]
                                    };
                                    ::facet::Variant::builder()
                                        .name("B")
                                        .discriminant(1)
                                        .offset(0)
                                        .fields(
                                            ::facet::Struct::builder()
                                                .tuple()
                                                .fields(fields)
                                                .build(),
                                        )
                                        .doc(&[" This is variant B", " with multiple lines"])
                                        .build()
                                },
                                {
                                    let fields: &'static [::facet::Field] = &const {
                                        [
                                            ::facet::Field::builder()
                                                .name("x")
                                                .shape(|| {
                                                    ::facet::shape_of(
                                                        &|s: &__ShadowCommentedEnum_C| &s.x,
                                                    )
                                                })
                                                .offset(::core::mem::offset_of!(
                                                    __ShadowCommentedEnum_C,
                                                    x
                                                ))
                                                .flags(::facet::FieldFlags::EMPTY)
                                                .attributes(&[])
                                                .doc(&[" This is field x"])
                                                .build(),
                                            ::facet::Field::builder()
                                                .name("y")
                                                .shape(|| {
                                                    ::facet::shape_of(
                                                        &|s: &__ShadowCommentedEnum_C| &s.y,
                                                    )
                                                })
                                                .offset(::core::mem::offset_of!(
                                                    __ShadowCommentedEnum_C,
                                                    y
                                                ))
                                                .flags(::facet::FieldFlags::EMPTY)
                                                .attributes(&[])
                                                .doc(&[" This is field y"])
                                                .build(),
                                        ]
                                    };
                                    ::facet::Variant::builder()
                                        .name("C")
                                        .discriminant(2)
                                        .offset(0)
                                        .fields(
                                            ::facet::Struct::builder()
                                                .struct_()
                                                .fields(fields)
                                                .build(),
                                        )
                                        .doc(&[" This is variant C", " which has named fields"])
                                        .build()
                                },
                            ]
                        },
                    )
                    .repr(::facet::EnumRepr::U8)
                    .build(),
            ))
            .build()
    };
}
