facet-derive-emit/tests/snapshots/codegen__enum_with_discriminants_binary.snap
---
source: facet-derive-emit/tests/codegen.rs
expression: "expand(r#\"\n        #[repr(u8)]\n        #[derive(Facet)]\n        enum BitFlags {\n          None = 0b0000_0000,\n          Read = 0b0000_0001,\n          Write = 0b0000_0010,\n          Execute = 0b0000_0100,\n          All = 0b0000_0111,\n        }\n        \"#)"
---
#[used]
static BIT_FLAGS_SHAPE: &'static ::facet::Shape = <BitFlags as ::facet::Facet>::SHAPE;
#[automatically_derived]
unsafe impl ::facet::Facet for BitFlags {
    const SHAPE: &'static ::facet::Shape = &const {
        let __facet_variants: &'static [::facet::Variant] = &const {
            [
                ::facet::Variant::builder()
                    .name("None")
                    .discriminant(0)
                    .fields(::facet::Struct::builder().unit().build())
                    .build(),
                ::facet::Variant::builder()
                    .name("Read")
                    .discriminant(1)
                    .fields(::facet::Struct::builder().unit().build())
                    .build(),
                ::facet::Variant::builder()
                    .name("Write")
                    .discriminant(2)
                    .fields(::facet::Struct::builder().unit().build())
                    .build(),
                ::facet::Variant::builder()
                    .name("Execute")
                    .discriminant(4)
                    .fields(::facet::Struct::builder().unit().build())
                    .build(),
                ::facet::Variant::builder()
                    .name("All")
                    .discriminant(7)
                    .fields(::facet::Struct::builder().unit().build())
                    .build(),
            ]
        };
        ::facet::Shape::builder()
            .id(::facet::ConstTypeId::of::<Self>())
            .layout(::core::alloc::Layout::new::<Self>())
            .vtable(::facet::value_vtable!(Self, |f, _opts| {
                ::core::fmt::Write::write_str(f, "BitFlags")
            }))
            .def(::facet::Def::Enum(
                ::facet::EnumDef::builder()
                    .variants(__facet_variants)
                    .repr(::facet::EnumRepr::U8)
                    .build(),
            ))
            .build()
    };
}
